--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -40,9 +40,24 @@
 	href="https://image.winudf.com/v2/image1/Y29tLnR5YWdveS5mYXRlY19pY29uXzE1NzM1NjM0MTRfMDMx/icon.png?w=170&fakeurl=1">
 
 <style type="text/css">
-body {
-	background-color: #f9f7f7;
-}
+	body {
+		background-color: #fff;
+	}
+	
+	.btn-card {
+		cursor: pointer;
+	}
+	
+	.btn-card:hover {
+    	transform: scale(1.030);
+    	border: 1px solid red;
+	}
+	
+	.card-header {
+		background-color: #dc3545;
+		color: #ffffff;
+	}
+	
 </style>
 </head>
 <body>
