--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -118,22 +118,15 @@
 							</ul>
 						</li>
 					</ul>
-					<form class="d-flex">
-						<input class="form-control me-2" type="search"
-							placeholder="Pesquisar" aria-label="Search">
-						<button class="btn btn-outline-dark me-2" type="submit">Pesquisar</button>
-
-						<a class="btn btn-outline-light me-2" href="#" th:href="@{/login}"
-							sec:authorize="!isAuthenticated()">Login</a>
-
+					<div class="d-flex">
 						<a class="btn btn-outline-light me-2" href="#" th:href="@{/join}"
-							sec:authorize="!isAuthenticated()">Join</a>
+							sec:authorize="!isAuthenticated()">Cadastre-se</a>
 
 						<a class="btn btn-outline-light me-2" href="#"
 							th:href="@{/logout}" sec:authorize="isAuthenticated()">Logout</a>
 
 						<span sec:authentication="name">Bob</span>
-					</form>
+					</div>
 				</div>
 			</div>
 		</nav>
