--- a/src/main/resources/templates/users/join.html
+++ b/src/main/resources/templates/users/join.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="www.thymeleaf.org">
 <head>
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Bootstrap CSS -->
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
 	rel="stylesheet"
 	integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
 	crossorigin="anonymous">
@@ -186,16 +185,15 @@ label.error {
 		<div class="login-info-box">
 			<h2>Já tem uma conta?</h2>
 			<p>Faça login no Fatecando agora mesmo!</p>
-			<label id="label-register" for="log-reg-show">Entrar</label> <input
-				type="radio" name="active-log-panel" id="log-reg-show"
-				checked="checked">
+			<label id="label-register" for="log-reg-show">Entrar</label>
+			<input type="radio" name="active-log-panel" id="log-reg-show" checked="checked">
 		</div>
 
 		<div class="register-info-box">
 			<h2>Não tem uma conta?</h2>
 			<p>Junte-se aos Fatecanos já!</p>
-			<label id="label-login" for="log-login-show">Registrar-se</label> <input
-				type="radio" name="active-log-panel" id="log-login-show">
+			<label id="label-login" for="log-login-show">Registrar-se</label>
+			<input type="radio" name="active-log-panel" id="log-login-show">
 		</div>
 
 		<div class="white-panel">
@@ -207,92 +205,88 @@ label.error {
 						<br>
 						Por favor, verifique os dados e tente novamente.
 					</div>
-					<input type="email" name="email" placeholder="E-mail"
-						class="form-control" required> 
-					<input type="password"
-						name="password" placeholder="Senha" class="form-control" required>
-						<br>
-					<input type="submit" value="Entrar"> 
+					<input type="email" name="email" placeholder="E-mail" class="form-control" required>
+					<input type="password" name="password" placeholder="Senha" class="form-control"
+						required>
+					<br>
+					<input type="submit" value="Entrar">
 					<a href="">Esqueceu a senha?</a>
 				</form>
 			</div>
 			<div class="register-show">
-				<form id="formRegister" action="" th:action="@{/registration}" th:object="${user}" method="post">
+				<form id="formRegister" action="#" method="post" th:action="@{/join}" th:object="${user}">
 					<h2>CRIAR CONTA</h2>
 					<input type="text" th:field="*{fullName}" placeholder="Nome Completo"
-						class="form-control" pattern="[A-Za-záàâãéèêíïóôõöúçñÁÀÂÃÉÈÍÏÓÔÕÖÚÇÑ ]+$" required> 
-					<input type="email" th:field="*{email}" placeholder="E-mail" class="form-control" required>
-					<input type="password" th:field="*{password}" placeholder="Senha"
-						class="form-control" required> <input type="submit"
-						value="Registrar-se">
+						class="form-control" pattern="[A-Za-záàâãéèêíïóôõöúçñÁÀÂÃÉÈÍÏÓÔÕÖÚÇÑ ]+$" required>
+					<input type="email" th:field="*{email}" placeholder="E-mail" class="form-control"
+						required>
+					<input type="password" th:field="*{password}" placeholder="Senha" class="form-control" required>
+					<input type="submit" value="Registrar-se">
 				</form>
 			</div>
 		</div>
 	</div>
-</body>
-<footer>
 
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-		crossorigin="anonymous">
-	</script>
+		crossorigin="anonymous"></script>
 
 	<script>
-
-		$(document).ready(() =>{
+		$(document).ready(function() {
 			$('.login-info-box').fadeOut();
 			$('.login-show').addClass('show-log-panel');
-			});
-			
-			
-			$('.login-reg-panel input[type="radio"]').on('change', function() {
-			if($('#log-login-show').is(':checked')) {
-			    $('.register-info-box').fadeOut(); 
-			    $('.login-info-box').fadeIn();
-			    
-			    $('.white-panel').addClass('right-log');
-			    $('.register-show').addClass('show-log-panel');
-			    $('.login-show').removeClass('show-log-panel');
-			    
-			}
-			else if($('#log-reg-show').is(':checked')) {
-			    $('.register-info-box').fadeIn();
-			    $('.login-info-box').fadeOut();
-			    
-			    $('.white-panel').removeClass('right-log');
-			    
-			    $('.login-show').addClass('show-log-panel');
-			    $('.register-show').removeClass('show-log-panel');
-			}
-					
-			
 		});
-			
+
+		$('.login-reg-panel input[type="radio"]').on('change', function() {
+			if ($('#log-login-show').is(':checked')) {
+				$('.register-info-box').fadeOut();
+				$('.login-info-box').fadeIn();
+
+				$('.white-panel').addClass('right-log');
+				$('.register-show').addClass('show-log-panel');
+				$('.login-show').removeClass('show-log-panel');
+			} else if ($('#log-reg-show').is(':checked')) {
+				$('.register-info-box').fadeIn();
+				$('.login-info-box').fadeOut();
+
+				$('.white-panel').removeClass('right-log');
+
+				$('.login-show').addClass('show-log-panel');
+				$('.register-show').removeClass('show-log-panel');
+			}
+		});
+
 		jQuery.extend(jQuery.validator.messages, {
-		    required: "Este campo &eacute; obrigatório.",
-		    remote: "Por favor, corrija este campo.",
-		    email: "Por favor, forne&ccedil;a um endere&ccedil;o eletr&ocirc;nico v&aacute;lido.",
-		    url: "Por favor, forne&ccedil;a uma URL v&aacute;lida.",
-		    date: "Por favor, forne&ccedil;a uma data v&aacute;lida.",
-		    dateISO: "Por favor, forne&ccedil;a uma data v&aacute;lida (ISO).",
-		    number: "Por favor, forne&ccedil;a um n&uacute;mero v&aacute;lido.",
-		    digits: "Por favor, forne&ccedil;a somente d&iacute;gitos.",
-		    creditcard: "Por favor, forne&ccedil;a um cart&atilde;o de cr&eacute;dito v&aacute;lido.",
-		    equalTo: "Por favor, forne&ccedil;a o mesmo valor novamente.",
-		    accept: "Por favor, forne&ccedil;a um valor com uma extens&atilde;o v&aacute;lida.",
-		    maxlength: jQuery.validator.format("Por favor, forne&ccedil;a n&atilde;o mais que {0} caracteres."),
-		    minlength: jQuery.validator.format("Por favor, forne&ccedil;a ao menos {0} caracteres."),
-		    rangelength: jQuery.validator.format("Por favor, forne&ccedil;a um valor entre {0} e {1} caracteres de comprimento."),
-		    range: jQuery.validator.format("Por favor, forne&ccedil;a um valor entre {0} e {1}."),
-		    max: jQuery.validator.format("Por favor, forne&ccedil;a um valor menor ou igual a {0}."),
-		    min: jQuery.validator.format("Por favor, forne&ccedil;a um valor maior ou igual a {0}."),
-		    pattern: "Formato inválido."
+			required: "Este campo &eacute; obrigatório.",
+			remote: "Por favor, corrija este campo.",
+			email: "Por favor, forne&ccedil;a um endere&ccedil;o eletr&ocirc;nico v&aacute;lido.",
+			url: "Por favor, forne&ccedil;a uma URL v&aacute;lida.",
+			date: "Por favor, forne&ccedil;a uma data v&aacute;lida.",
+			dateISO: "Por favor, forne&ccedil;a uma data v&aacute;lida (ISO).",
+			number: "Por favor, forne&ccedil;a um n&uacute;mero v&aacute;lido.",
+			digits: "Por favor, forne&ccedil;a somente d&iacute;gitos.",
+			creditcard: "Por favor, forne&ccedil;a um cart&atilde;o de cr&eacute;dito v&aacute;lido.",
+			equalTo: "Por favor, forne&ccedil;a o mesmo valor novamente.",
+			accept: "Por favor, forne&ccedil;a um valor com uma extens&atilde;o v&aacute;lida.",
+			maxlength: jQuery.validator
+				.format("Por favor, forne&ccedil;a n&atilde;o mais que {0} caracteres."),
+			minlength: jQuery.validator
+				.format("Por favor, forne&ccedil;a ao menos {0} caracteres."),
+			rangelength: jQuery.validator
+				.format("Por favor, forne&ccedil;a um valor entre {0} e {1} caracteres de comprimento."),
+			range: jQuery.validator
+				.format("Por favor, forne&ccedil;a um valor entre {0} e {1}."),
+			max: jQuery.validator
+				.format("Por favor, forne&ccedil;a um valor menor ou igual a {0}."),
+			min: jQuery.validator
+				.format("Por favor, forne&ccedil;a um valor maior ou igual a {0}."),
+			pattern: "Formato inválido."
 		});
-			
+
 		$("#formLogin").validate();
-			
+
 		$("#formRegister").validate();
-	
 	</script>
-</footer>
+</body>
+</html>
