Add a button to like the disciplines

--- a/src/main/resources/templates/disciplines/discipline-details.html
+++ b/src/main/resources/templates/disciplines/discipline-details.html
@@ -1,25 +1,43 @@
 <!DOCTYPE html>
 <html xmlns:th="www.thymeleaf.org"
 	th:replace="~{fragments/layout :: base(${discipline.code}, ~{::body})}">
+<head>
+<meta charset="utf-8">
+</head>
 <body>
 	<div class="card mt-3 p-1">
 		<div class="card-body">
-			<h4 class="card-title"
+			<h4 class="card-title text-center fw-bold"
 				th:text="${discipline.code} + ' - ' +${discipline.name}"></h4>
 
-			<b>Ementa:</b> <span th:text="${discipline.description}"></span>
+			<div class="mb-2">
+				<b>Ementa:</b>
+				<span th:text="${discipline.description}"></span>
+			</div>
 
-			<br>
-			<br>
+			<div class="mb-2">
+				<b>Objetivo:</b>
+				<span th:text="${discipline.objective}"></span>
+			</div>
 
-			<b>Objetivo:</b> <span th:text="${discipline.objective}"></span>
+			<div class="d-flex justify-content-end">
+				<button id="like" type="button" class="rounded-start"
+					th:classappend="${discipline.user.liked}? 'btn-danger' : 'btn-secondary'"
+					th:data-liked="${discipline.user.liked}">
+					<span id="likeButtonText" th:text="${discipline.user.liked} ? 'Descurtir' : 'Curtir'"></span>
+					<i class="fa fa-thumbs-up"></i>
+				</button>
+				<br>
+				<span id="totalLikes"
+					class="border border-2 border-start-0 border-danger p-2 rounded-end"
+					th:text="${discipline.likes}"></span>
+			</div>
 		</div>
 
-		<div class="progress">
-			<div
-				class="progress-bar progress-bar-striped progress-bar-animated bg-danger"
-				role="progressbar" aria-valuenow="55" aria-valuemin="0"
-				aria-valuemax="100" style="width: 55%">55% ESTUDADO</div>
+		<div class="progress" style="height: 25px;">
+			<div class="progress-bar progress-bar-striped progress-bar-animated bg-danger fw-bold"
+				role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"
+				style="width: 55%">55% estudado</div>
 		</div>
 	</div>
 
@@ -28,51 +46,44 @@
 	<div class="card">
 		<div class="card-header">
 			<ul class="nav nav-tabs fw-bolder">
-				<li class="nav-item"><a class="nav-link text-danger"
-						th:classappend="${page} == 'topics'? 'active'" href="#"
-						th:href="@{/disciplines/{id}(id=${discipline.id}, page='topics')}">Topicos</a>
+				<li class="nav-item">
+					<a class="nav-link text-danger" th:classappend="${page} == 'topics'? 'active'"
+						href="#" th:href="@{/disciplines/{id}(id=${discipline.id}, page='topics')}">Topicos</a>
 				</li>
-				<li class="nav-item"><a class="nav-link text-danger"
-						th:classappend="${page} == 'tests'? 'active'" href="#"
-						th:href="@{/disciplines/{id}(id=${discipline.id}, page='tests')}">Simulados</a>
+				<li class="nav-item">
+					<a class="nav-link text-danger" th:classappend="${page} == 'tests'? 'active'"
+						href="#" th:href="@{/disciplines/{id}(id=${discipline.id}, page='tests')}">Simulados</a>
 				</li>
-				<li class="nav-item"><a class="nav-link text-danger"
-						th:classappend="${page} == 'forum'? 'active'" href="#"
-						th:href="@{/disciplines/{id}(id=${discipline.id}, page='forum')}">Forum</a>
+				<li class="nav-item">
+					<a class="nav-link text-danger" th:classappend="${page} == 'forum'? 'active'"
+						href="#" th:href="@{/disciplines/{id}(id=${discipline.id}, page='forum')}">Forum</a>
 				</li>
 			</ul>
 		</div>
 		<div class="card-body bg-danger">
 			<!-- Topics -->
-			<div class="list-group"
-				th:if="${#strings.equalsIgnoreCase(page, 'topics')}">
-				<a href="#"
-					class="list-group-item list-group-item-action shadow-lg mb-2"
-					th:each="topic : ${topics}"
-					th:href="@{/topic/{id}(id=${topic.id})}">
+			<div class="list-group" th:if="${#strings.equalsIgnoreCase(page, 'topics')}">
+				<a href="#" class="list-group-item list-group-item-action shadow-lg mb-2"
+					th:each="topic : ${topics}" th:href="@{/topic/{id}(id=${topic.id})}">
 					<div class="d-flex w-100 justify-content-between">
-						<h5 class="mb-1" th:text="${topic.name}">List group item
-							heading</h5>
+						<h5 class="mb-1" th:text="${topic.name}">List group item heading</h5>
 						<small class="text-muted">3 days ago</small>
 					</div>
-					<p class="mb-1" th:text="${topic.description}">Some placeholder
-						content in a paragraph.</p>
+					<p class="mb-1" th:text="${topic.description}">Some placeholder content in a
+						paragraph.</p>
 					<small class="text-muted">And some muted small print.</small>
 				</a>
 			</div>
 
 			<!-- Tests -->
-			<div class="list-group"
-				th:if="${#strings.equalsIgnoreCase(page, 'tests')}">
+			<div class="list-group" th:if="${#strings.equalsIgnoreCase(page, 'tests')}">
 
-				<a href="#"
-					class="list-group-item list-group-item-action shadow-lg mb-2">
+				<a href="#" class="list-group-item list-group-item-action shadow-lg mb-2">
 					<div class="d-flex w-100 justify-content-between">
 						<h5 class="mb-1">Simulado - P1</h5>
 						<small class="text-muted">3 days ago</small>
 					</div>
-					<p class="mb-1">Topicos abortados: Topico 1, Topico 2, Topico
-						3, Topico 4</p>
+					<p class="mb-1">Topicos abortados: Topico 1, Topico 2, Topico 3, Topico 4</p>
 					<small class="text-muted">And some muted small print.</small>
 				</a>
 			</div>
@@ -84,22 +95,20 @@
 						<label>Precisa de Ajuda?</label>
 
 						<!-- Button trigger modal -->
-						<button type="button" class="btn btn-outline-dark"
-							data-bs-toggle="modal" data-bs-target="#exampleModal">Criar
-							um novo Topico</button>
+						<button type="button" class="btn btn-outline-dark" data-bs-toggle="modal"
+							data-bs-target="#exampleModal">Criar um novo Topico</button>
 
 						<!-- Modal -->
 						<div class="modal fade" id="forumTopicModal" tabindex="-1"
 							aria-labelledby="exampleModalLabel" aria-hidden="true">
-							<div
-								class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+							<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
 								<div class="modal-content">
 									<div class="modal-header">
 										<h5 class="modal-title" id="exampleModalLabel"
-											th:text="${discipline.code} + ' - Novo Topico para o Forum'">Novo
-											Topico Forum</h5>
-										<button type="button" class="btn-close"
-											data-bs-dismiss="modal" aria-label="Close"></button>
+											th:text="${discipline.code} + ' - Novo Topico para o Forum'">Novo Topico
+											Forum</h5>
+										<button type="button" class="btn-close" data-bs-dismiss="modal"
+											aria-label="Close"></button>
 									</div>
 									<div class="modal-body">
 										<div>
@@ -110,16 +119,13 @@
 
 											<div class="mb-3">
 												<label for="exampleFormControlTextarea1" class="form-label">Descricao</label>
-												<textarea id="description" class="form-control" rows="3"
-													required></textarea>
+												<textarea id="description" class="form-control" rows="3" required></textarea>
 											</div>
 										</div>
 									</div>
 									<div class="modal-footer">
-										<button type="button" class="btn btn-secondary"
-											data-bs-dismiss="modal">Cancelar</button>
-										<button id="createForumTopic" type="button"
-											class="btn btn-primary">Criar</button>
+										<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+										<button id="createForumTopic" type="button" class="btn btn-primary">Criar</button>
 									</div>
 								</div>
 							</div>
@@ -132,12 +138,11 @@
 						th:each="topic : ${forumTopics}">
 
 						<div class="d-flex w-100 justify-content-between">
-							<h5 class="mb-1" th:text="${topic.title}">List group item
-								heading</h5>
+							<h5 class="mb-1" th:text="${topic.title}">List group item heading</h5>
 							<small class="text-muted">3 days ago</small>
 						</div>
-						<p class="mb-1 text-truncate" th:text="${topic.description}">Some
-							placeholder content in a paragraph.</p>
+						<p class="mb-1 text-truncate" th:text="${topic.description}">Some placeholder
+							content in a paragraph.</p>
 
 						<small class="text-muted">Postado por Gustavo Alves.</small>
 					</a>
@@ -157,6 +162,24 @@
 			}, function() {
 				$('#forumTopicModal').modal('hide');
 			});
+		});
+
+		$('#like').click(function() {
+			$.post(location.href + '/like');
+
+			let button = $(this);
+
+			let liked = !(button.data('liked') === true);
+
+			$(button).data('liked', liked);
+
+			$('#likeButtonText').text(liked ? 'Descurtir' : 'Curtir');
+
+			let totalLikes = parseInt($('#totalLikes').text());
+			$('#totalLikes').text(liked ? totalLikes + 1 : totalLikes - 1);
+
+			button.removeClass(liked ? "btn-secondary" : 'btn-danger')
+			button.addClass(liked ? "btn-danger" : 'btn-secondary');
 		});
 	</script>
 </body>
