--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -17,6 +17,8 @@
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <!-- WYSIWYG editor -->
 <script src="https://cdn.ckeditor.com/4.16.0/standard-all/ckeditor.js"></script>
 
